--- a/sports.html
+++ b/sports.html
@@ -47,18 +47,18 @@
     </div>
     <main>
         <div class="event">
-            <a href="ncaa_seating.html"><img src="images/ncaaB.jpg" alt="NCAA"></a>
-            <h3>NCAA Season 100 Men's Basketball Game</h3>
+            <a href="ncaa_seating.html"><img src="xx.jpg" alt="sports"></a>
+            <h3>NCAA Season 100 Women's Volleyball Game</h3>
             <p>Venue: FILOIL ECOOIL CENTRE</p>
-            <p>November 30, 2024 | 12:00 PM</p>
+            <p>Date here</p>
             <a href="ncaa_seating.html" class="buy-button">Buy Tickets</a>
         </div>
 
         <div class="event">
-            <a href="uaap_seating.html"><img src="images/uaap.jpg" alt="UAAP"></a>
-            <h3>UAAP Season 87 Men's Basketball Game</h3>
-            <p>Venue: SMART ARANETA COLISEUM</p>
-            <p>November 30, 2024 | 6:30 PM</p>
+            <a href="uaap_seating.html"><img src="xx.jpg" alt="sports"></a>
+            <h3>UAAP Season 87 Women's Volleyball Game</h3>
+            <p>Venue: SM MALL OF ASIA ARENA</p>
+            <p>Date here</p>
             <a href="uaap_seating.html" class="buy-button">Buy Tickets</a>
         </div>
 
@@ -66,23 +66,23 @@
             <a href="pvl_seating.html"><img src="images/pvl.jpg" alt="PVL"></a>
             <h3>PVL 2024-2025 All Filipino Conference</h3>
             <p>Venue: PHILSPORTS ARENA</p>
-            <p>December 04, 2024</p>
+            <p>Date here</p>
             <a href="pvl_seating.html" class="buy-button">Buy Tickets</a>
         </div>
 
         <div class="event">
-            <a href="pfl_seating.html"><img src="images/pfl.jpg" alt="PFL"></a>
-            <h3>Philippines Football League 2024-2025</h3>
-            <p>Venue: RIZAL FOOTBALL STADIUM</p>
-            <p>December 14, 2024</p>
+            <a href="pfl_seating.html"><img src="xx.jpg" alt="sports"></a>
+            <h3>Sports Event 4</h3>
+            <p>Venue: Ynares Stadium</p>
+            <p>Date here</p>
             <a href="pfl_seating.html" class="buy-button">Buy Tickets</a>
-        </div>
+        </div> 
 
         <div class="event">
-            <a href="easl_seating.html"><img src="images/easl.jpg" alt="EASL"></a>
-            <h3>EASL Manila 2024-25 Season</h3>
+            <a href="easl_seating.html"><img src="xx.jpg" alt="sports"></a>
+            <h3>Sports Event 5</h3>
             <p>Venue: PHILSPORTS ARENA</p>
-            <p>January 15, 2024</p>
+            <p>Date here</p>
             <a href="easl_seating.html" class="buy-button">Buy Tickets</a>
         </div>
 
