--- a/theater.html
+++ b/theater.html
@@ -47,8 +47,8 @@
     </div>
     <main>
         <div class="event">
-            <a href="jepoy_seating.html"><img src="images/jepoy.jpg" alt="Jepoy"></a>
-            <h3>Jepoy & The Magic Circle</h3>
+            <a href="jepoy_seating.html"><img src="xx.jpg" alt="theater"></a>
+            <h3>Theater Event 1</h3>
             <p>Venue: EASTWOOD CITYWALK THEATER</p>
             <p>October - December 2024</p>
             <br>
@@ -56,36 +56,36 @@
         </div>
 
         <div class="event">
-            <a href="tabilog_seating.html"><img src="images/tabilogp.jpg" alt="Tabing Ilog"></a>
-            <h3>ABS-CBN Tabing Ilog The Musical</h3>
+            <a href="tabilog_seating.html"><img src="xx.jpg" alt="theater"></a>
+            <h3>Theater Event 2</h3>
             <p>Venue: PETA THEATER CENTER</p>
-            <p>December 01, 2024</p>
+            <p>Date here</p>
             <br>
             <a href="tabilog_seating.html" class="buy-button">Buy Tickets</a>
         </div>
 
         <div class="event">
-            <a href="ccp_seating.html"><img src="images/sandosapatos.jpg" alt="CCP"></a>
-            <h3>Sandosenang Sapatos</h3>
-            <p>Venue: CCP TANGHALANG IGNACIO GIMENEZ</p>
-            <p>December 08, 2024</p>
+            <a href="ccp_seating.html"><img src="images/pingkian.jpg" alt="theater"></a>
+            <h3>Pingkian: Isang Musikal</h3>
+            <p>Venue: CCP TANGHALANG IGNACIO JIMENEZ</p>
+            <p>September 12 - October 12, 2025</p>
             <br>
             <a href="ccp_seating.html" class="buy-button">Buy Tickets</a>
-        </div>
+        </div> 
 
         <div class="event">
-            <a href="nutc_seating.html"><img src="images/pbt.jpg" alt="Nutcraker"></a>
-            <h3>Nutcraker by The Philippine Ballet Theater</h3>
+            <a href="nutc_seating.html"><img src="xx.jpg" alt="theater"></a>
+            <h3>Theater Event 4</h3>
             <p>Venue: SAMSUNG PERFORMING ARTS THEATER</p>
-            <p>December 18, 2024</p>
+            <p>Date here</p>
             <a href="nutc_seating.html" class="buy-button">Buy Tickets</a>
         </div>
 
         <div class="event">
-            <a href="disney_seating.html"><img src="images/disney.jpg" alt="Disney"></a>
-            <h3>Disney on Ice 2024: Find Your Hero</h3>
+            <a href="disney_seating.html"><img src="xx.jpg" alt="theater"></a>
+            <h3>Theater Event 5</h3>
             <p>Venue: SM MALL OF ASIA ARENA</p>
-            <p>December 21, 2024</p>
+            <p>Date here</p>
             <br>
             <a href="disney_seating.html" class="buy-button">Buy Tickets</a>
         </div>
