--- a/jokoy_seating.html
+++ b/jokoy_seating.html
@@ -9,15 +9,15 @@
 </head>
 <body>
     <header>
-        <div class="logo-title-container">
+        <div class="logo-title-container"> 
             <div class="logo">
                 <a href="index.html"><img src="images/logo.png" alt="EZ Tickets Logo"></a>
             </div>
             <div class="title">
                 <b>EZ Tickets</b>
             </div>
-        </div>
-        <nav>
+        </div> 
+        <nav> 
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="venues.html">Event Venues</a></li>
@@ -40,41 +40,42 @@
             <a href="login.html" class="button">Login / Signup</a>
         </div>
     </div>
-
+ 
     <main>
 
         <div class="container">
             <!-- Left Side - Seat Plan Image -->
             <div class="left">
-                <img src="images/disney_seating.png" alt="Arena Seat Plan">
+                <img src="images/jokoy_seating.png" alt="Arena Seat Plan">
             </div>
  
-        <div class="right">
-            <h2>Disney on Ice 2024: Find Your Hero</h2>
-            <h3>December 21, 2024 | SM MALL OF ASIA ARENA</h3>
+        <div class="right"> 
+            <h2>Jo Koy Just Being KOY Tour</h2>
+            <h3>June 21, 2025 | SM MALL OF ASIA ARENA</h3>
             <br>
             <div class="form-group">
                 <label for="location">Section</label>
-                <select id="location" onchange= "previewSections(); pricePreview();" required>
+                <select id="location" onchange="previewSections(); pricePreview();" required>
                     <option value="" disabled selected hidden>Select Section</option> <!-- Faded default option -->
-                    <option value="disney-front-row" data-price="5400">Front Row</option>
-                    <option value="disney-svip" data-price="4200">SVIP</option>
-                    <option value="disney-vip" data-price="3400">VIP</option>
-                    <option value="disney-lb-center" data-price="2600">Lowerbox Center</option>
-                    <option value="disney-lb-premium" data-price="2200">Lowerbox Premium</option>
-                    <option value="disney-lb-regular" data-price="2000">Lowerbox Regular</option>
-                    <option value="disney-ub-center" data-price="1000">Upper Box Center</option>
-                    <option value="disney-ub-regular" data-price="800">Upper Box Regular</option>
-                    <option value="disney-general-admission" data-price="300">General Admission</option>
-                </select>
+                    <option value="jokoy-floor-seating" data-price="7500">Floor Seating</option>
+                    <option value="jokoy-patron" data-price="7000">Patron</option>
+                    <option value="jokoy-lba-premium" data-price="6500">LBA Premium</option>
+                    <option value="jokoy-patron-center" data-price="6000">Patron Center</option>
+                    <option value="jokoy-lba-regular" data-price="5500">LBA Regular</option>
+                    <option value="jokoy-lbb-premium" data-price="5000">LBB Premium</option>
+                    <option value="jokoy-lbb-regular" data-price="4500">LBB Regular</option>
+                    <option value="jokoy-ub-premium" data-price="3000">Upper Box Premium</option>
+                    <option value="jokoy-ub-regular" data-price="2500">Upper Box Regular</option>
+                    <option value="jokoy-general-admission" data-price="1500">General Admission</option>
+                </select> 
             </div>
             <div class="form-group">
-                <label for="section">Section Number</label>
+                <label for="section">Row</label>
                 <select id="section" required>
                     <!-- Nasa JS na yung sections and will be shown dynamically -->
                 </select>
             </div>
-        
+            
             <div class="price-display">
                 Total Price: ₱<span id="total-price">0.00</span>
             </div>
